[gd_scene load_steps=42 format=3 uid="uid://b67lc5s4k83l"]

[ext_resource type="PackedScene" uid="uid://8kqtrr2s7md4" path="res://Scenes/Enemy/enemy.tscn" id="1_w40df"]
[ext_resource type="Script" path="res://Scenes/Enemy/Fly/fly_creature.gd" id="2_6812j"]
[ext_resource type="Script" path="res://Scenes/Enemy/Fly/FlyCreatureFSM.gd" id="3_t03cl"]
[ext_resource type="Script" path="res://Scenes/Enemy/Fly/flyFSM.gd" id="4_0khrc"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" id="4_7t7vr"]
[ext_resource type="Texture2D" uid="uid://nlmamqi0wton" path="res://Art/all/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" id="4_wb04w"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/states/State.gd" id="5_k0p12"]
[ext_resource type="Texture2D" uid="uid://bx8of32nbrty3" path="res://Art/all/enemies/flying creature/fly_anim_spritesheet.png" id="5_mmd6w"]
[ext_resource type="Script" path="res://Scenes/HitBox.gd" id="6_cw6cy"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" id="6_dtbvp"]
[ext_resource type="Script" path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" id="7_atuup"]

[sub_resource type="Resource" id="Resource_wnmw1"]
script = ExtResource("5_k0p12")
name = "Entry"
metadata/graph_offset = Vector2(509, 363)

[sub_resource type="Resource" id="Resource_m34bx"]
script = ExtResource("5_k0p12")
name = "chase"
metadata/graph_offset = Vector2(818, 361)

[sub_resource type="Resource" id="Resource_28c68"]
script = ExtResource("5_k0p12")
name = "hurt"
metadata/graph_offset = Vector2(682, 510)

[sub_resource type="Resource" id="Resource_xs17s"]
script = ExtResource("5_k0p12")
name = "dead"
metadata/graph_offset = Vector2(980, 505)

[sub_resource type="Resource" id="Resource_atd8e"]
script = ExtResource("6_dtbvp")
from = "Entry"
to = "chase"
conditions = {}
priority = 0

[sub_resource type="Resource" id="Resource_opm5r"]
script = ExtResource("7_atuup")
name = "hurt"

[sub_resource type="Resource" id="Resource_mp3g6"]
script = ExtResource("6_dtbvp")
from = "chase"
to = "hurt"
conditions = {
"hurt": SubResource("Resource_opm5r")
}
priority = 0

[sub_resource type="Resource" id="Resource_au3i7"]
script = ExtResource("7_atuup")
name = "dead"

[sub_resource type="Resource" id="Resource_4nyh8"]
script = ExtResource("6_dtbvp")
from = "chase"
to = "dead"
conditions = {
"dead": SubResource("Resource_au3i7")
}
priority = 0

[sub_resource type="Resource" id="Resource_i38te"]
script = ExtResource("7_atuup")
name = "dead"

[sub_resource type="Resource" id="Resource_g7j3g"]
script = ExtResource("6_dtbvp")
from = "hurt"
to = "dead"
conditions = {
"dead": SubResource("Resource_i38te")
}
priority = 0

[sub_resource type="Resource" id="Resource_2g7jd"]
script = ExtResource("7_atuup")
name = "chase"

[sub_resource type="Resource" id="Resource_a2mmy"]
script = ExtResource("6_dtbvp")
from = "hurt"
to = "chase"
conditions = {
"chase": SubResource("Resource_2g7jd")
}
priority = 0

[sub_resource type="Resource" id="Resource_pigyc"]
script = ExtResource("4_7t7vr")
states = {
"Entry": SubResource("Resource_wnmw1"),
"chase": SubResource("Resource_m34bx"),
"dead": SubResource("Resource_xs17s"),
"hurt": SubResource("Resource_28c68")
}
transitions = {
"Entry": {
"chase": SubResource("Resource_atd8e")
},
"chase": {
"dead": SubResource("Resource_4nyh8"),
"hurt": SubResource("Resource_mp3g6")
},
"hurt": {
"chase": SubResource("Resource_a2mmy"),
"dead": SubResource("Resource_g7j3g")
}
}
name = ""

[sub_resource type="CircleShape2D" id="CircleShape2D_166vu"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_he86u"]
atlas = ExtResource("4_wb04w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrb2h"]
atlas = ExtResource("4_wb04w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjde8"]
atlas = ExtResource("4_wb04w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwlty"]
atlas = ExtResource("4_wb04w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ivix"]
atlas = ExtResource("5_mmd6w")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pr164"]
atlas = ExtResource("5_mmd6w")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj0wh"]
atlas = ExtResource("5_mmd6w")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhn32"]
atlas = ExtResource("5_mmd6w")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ulne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_he86u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrb2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjde8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwlty")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ivix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pr164")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj0wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhn32")
}],
"loop": false,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gknpl"]
radius = 4.0

[sub_resource type="Animation" id="Animation_pg8ax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurt/HurtShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gbbad"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [3, 0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"fly", &"dead"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hurt/HurtShape:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_imipg"]
resource_name = "fly"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_qkxer"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fly"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc2w4"]
_data = {
"RESET": SubResource("Animation_pg8ax"),
"dead": SubResource("Animation_gbbad"),
"fly": SubResource("Animation_imipg"),
"hurt": SubResource("Animation_qkxer")
}

[node name="FlyCreature" instance=ExtResource("1_w40df")]
script = ExtResource("2_6812j")
acceleration = 20
max_speed = 70
flying = true

[node name="FiniteStateMachine" type="Node" parent="." index="0"]
script = ExtResource("3_t03cl")

[node name="FSM" type="Node" parent="." index="1"]
script = ExtResource("4_0khrc")

[node name="StateMachinePlayer" parent="." index="2"]
state_machine = SubResource("Resource_pigyc")

[node name="Hurt" type="Area2D" parent="." index="3"]
collision_layer = 4
collision_mask = 0

[node name="HurtShape" type="CollisionShape2D" parent="Hurt" index="0"]
shape = SubResource("CircleShape2D_166vu")
debug_color = Color(0.635294, 0.52549, 0.0470588, 0.419608)

[node name="AnimatedSprite2D" parent="." index="4"]
visible = false
sprite_frames = SubResource("SpriteFrames_7ulne")
animation = &"fly"
autoplay = ""
frame = 3

[node name="CollisionShape2D" parent="." index="5"]
position = Vector2(0, 1)
disabled = false

[node name="HitBox" type="Area2D" parent="." index="6"]
collision_layer = 0
collision_mask = 2
script = ExtResource("6_cw6cy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_gknpl")
debug_color = Color(0.944911, 0.192965, 0.354483, 0.419608)

[node name="AnimationPlayer" parent="." index="7"]
libraries = {
"": SubResource("AnimationLibrary_gc2w4")
}

[connection signal="transited" from="StateMachinePlayer" to="FSM" method="_on_state_machine_player_transited"]
[connection signal="updated" from="StateMachinePlayer" to="FSM" method="_on_state_machine_player_updated"]
